--- a/front/package.json
+++ b/front/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "front",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "format": "prettier --write src/"
-  },
-  "dependencies": {
-    "pinia": "^3.0.1",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "prettier": "3.5.3",
-    "vite": "^6.2.1",
-    "vite-plugin-vue-devtools": "^7.7.2"
-  }
+    "name": "front",
+    "version": "0.0.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "format": "prettier --write src/"
+    },
+    "dependencies": {
+        "@element-plus/icons-vue": "^2.3.1",
+        "@tailwindcss/vite": "^4.0.15",
+        "echarts": "^5.6.0",
+        "element-plus": "^2.9.7",
+        "pinia": "^3.0.1",
+        "tailwindcss": "^4.0.15",
+        "vue": "^3.5.13",
+        "vue-router": "^4.5.0"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^5.2.1",
+        "prettier": "3.5.3",
+        "vite": "^6.2.1",
+        "vite-plugin-vue-devtools": "^7.7.2"
+    }
 }
