--- a/front/package.json
+++ b/front/package.json
@@ -10,12 +10,11 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
-        "@element-plus/icons-vue": "^2.3.1",
-        "@tailwindcss/vite": "^4.0.15",
+        "@vicons/ionicons5": "^0.12.0",
+        "axios": "^1.8.4",
         "echarts": "^5.6.0",
-        "element-plus": "^2.9.7",
+        "naive-ui": "^2.38.1",
         "pinia": "^3.0.1",
-        "tailwindcss": "^4.0.15",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0"
     },
