--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
         "@vicons/ionicons5": "^0.12.0",
         "axios": "^1.8.4",
         "echarts": "^5.6.0",
+        "exceljs": "^4.4.0",
         "naive-ui": "^2.38.1",
         "pinia": "^3.0.1",
         "vue": "^3.5.13",
